Add text for balenaCloud

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">OCR Using Tesseract via Docker</h1>
+      <h1 class="title">OCR Tesseract App Deployed to Jetson Nano Device Using balenaCloud</h1>
     </header>
 
     <div class="container-fluid">
