--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,14 +2,14 @@
 
 {% block content %}
   
-    <p class="text-left">This is a demonstration of OCR using Python, Tesseract 4.0 for the OCR algorithm, and OpenCV for image preprocessing.</p>
+    <p class="text-left">This is a demonstration of deploying an app to a <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit" target="_new">Nvidia Jetson Nano</a> device using <a href="https://www.balena.io" target="_new">balenaCloud</a>.  The app itself shows OCR using Python, Tesseract 4.0 for the OCR algorithm, and OpenCV for image preprocessing. </p>
     <p>Upload an image of a document for OCR - there is a 2MB size limit using the Flask Development server (not intended for production).  Here are images under 1MB (right click on link and save to disk):<p>
       <ul>
         <li><a href="https://www.torzyn.com/images/senior_python_developer_nlplogix1_sm.jpg" target="_new">Senior Python Developer 1</a></li>
         <li><a href="https://www.torzyn.com/images/senior_python_developer_nlplogix2_sm.jpg" target="_new">Senior Python Developer 2</a></li>
         <li><a href="https://www.torzyn.com/images/senior_python_developer_nlplogix3_sm.jpg" target="_new">Senior Python Developer 3</a></li>
       </ul>
-      <p>Link to <a href="https://github.com/ricktorzynski/ocr-tesseract-docker" target="_new">Github repository</a></p>
+      <p>Link to <a href="https://github.com/ricktorzynski/balena-ocr-tesseract-docker" target="_new">Github repository</a></p>
     </p>
     </p>
     <div class="upload-form">
